--- a/express/.env
+++ b/express/.env
@@ -1,2 +1,9 @@
 # JWT 
 SECRET_KEY=This-is-very-secret-data-cannot-access
+
+# Database
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
+DB_NAME=backend_test
+DB_HOST=127.0.0.1
+DB_DIALECT=postgres
